--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <!--
+	Hologram by Pixelarity
+	pixelarity.com @pixelarity
 	License: pixelarity.com/license
 -->
 <html>
 	<head>
-		<title>Thumbometer</title>
+		<title>Untitled</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,8 +19,8 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#menu">Menu</a>
-				<a href="#">The Science</a>
-				<a href="#" class="button">Contact</a>
+				<a href="#">Log In</a>
+				<a href="#" class="button">Sign Up</a>
 			</header>
 
 		<!-- Nav -->
@@ -29,7 +31,8 @@
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 				<ul class="actions vertical">
-					<li><a href="#" class="button special fit">Contact</a></li>
+					<li><a href="#" class="button special fit">Log In</a></li>
+					<li><a href="#" class="button fit">Sign Up</a></li>
 				</ul>
 			</nav>
 
@@ -37,8 +40,8 @@
 			<section id="banner">
 				<header class="major">
 					<span class="icon fa-code style3"></span>
-					<h1>The Chef's Thumbometer</h1>
-					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y2_FHR6OoLA?rel=0&amp;showinfo=0&?rel=0&autoplay=1" frameborder="0" allowfullscreen"></iframe>
+					<h1>Hologram</h1>
+					<p>Sed ipsum lorem feugiat magna elementum</p>
 				</header>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Proceed</a></li>
