--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			<section id="banner">
 				<header class="major">
 					<span class="icon fa-code style3"></span>
-					<h1>Hi</h1>
-					<p>Sed ipsum lorem feugiat magna elementum</p>
+					<h1>The Chef's Thumbometer</h1>
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y2_FHR6OoLA?rel=0&amp;showinfo=0&?rel=0&autoplay=1" frameborder="0" allowfullscreen"></iframe>
 				</header>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Proceed</a></li>
